check_render_output.txt
    Checking ecolor v0.32.0
    Checking spirv v0.3.0+sdk-1.3.268.0
    Checking gpu-alloc-types v0.3.0
    Checking gpu-descriptor-types v0.2.0
   Compiling getrandom v0.3.3
    Checking gpu-allocator v0.27.0
    Checking wgpu-types v25.0.0
   Compiling rav1e v0.7.1
    Checking nom v7.1.3
   Compiling paste v1.0.15
   Compiling cargo_metadata v0.14.2
    Checking anstyle-wincon v3.0.7
    Checking windows_x86_64_msvc v0.53.0
    Checking anyhow v1.0.99
    Checking num-rational v0.4.2
error: The "wasm_js" backend requires the `wasm_js` feature for `getrandom`. For more information see: https://docs.rs/getrandom/0.3.3/#webassembly-support
  --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\backends.rs:34:17
   |
34 | /                 compile_error!(concat!(
35 | |                     "The \"wasm_js\" backend requires the `wasm_js` feature \
36 | |                     for `getrandom`. For more information see: \
37 | |                     https://docs.rs/getrandom/", env!("CARGO_PKG_VERSION"), "/#webassembly-support"
38 | |                 ));
   | |__________________^

error[E0425]: cannot find function `fill_inner` in module `backends`
  --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:99:19
   |
99 |         backends::fill_inner(dest)?;
   |                   ^^^^^^^^^^ not found in `backends`

error[E0425]: cannot find function `inner_u32` in module `backends`
   --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:128:15
    |
128 |     backends::inner_u32()
    |               ^^^^^^^^^ not found in `backends`
    |
help: consider importing this function
    |
 33 + use crate::util::inner_u32;
    |
help: if you import `inner_u32`, refer to it directly
    |
128 -     backends::inner_u32()
128 +     inner_u32()
    |

error[E0425]: cannot find function `inner_u64` in module `backends`
   --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:142:15
    |
142 |     backends::inner_u64()
    |               ^^^^^^^^^ not found in `backends`
    |
help: consider importing this function
    |
 33 + use crate::util::inner_u64;
    |
help: if you import `inner_u64`, refer to it directly
    |
142 -     backends::inner_u64()
142 +     inner_u64()
    |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `getrandom` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
